feat(survey): Implement both enterprise with different survey management
